--- a/kasa/src/styles/App.scss
+++ b/kasa/src/styles/App.scss
@@ -1,11 +1,26 @@
-@mixin flexCenterDimensions ($X, $Y, $background, $flexDIrection:column) {
+@mixin flexCenter(){
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@mixin gridDimensions($X, $Y, $color, $gap) {
+  width: $X;
+  height: $Y;
+  background: $color;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: $gap;
+}
+
+@mixin flexDimensions ($X, $Y, $background, $flexDirection:column, $justify:space-between) {
   width: $X;
   height: $Y;
   background: $background;
   display: flex;
-  justify-content: space-between;
+  justify-content: $justify;
   align-items: center;
-  flex-direction: $flexDIrection;
+  flex-direction: $flexDirection;
 }
 
 @mixin write($weight, $size, $lineHeight, $color, $align:center, $decoration:none) {
@@ -14,7 +29,13 @@
   line-height: $lineHeight;
   color: $color;
   text-align: $align;
-  text-decoration: none;
+  text-decoration: $decoration;
+}
+
+@mixin boxShadowAndBorder($rayon:25px, $e:1px, $colorBorder:#000, $x:0px, $y:4px, $blur:4px, $colorOppacity:rgba(0,0,0,0.25)) {
+  border-radius: $rayon;
+  border: $e solid $colorBorder;
+  box-shadow: $x $y $blur $colorOppacity;
 }
 
 *, ::before, ::after {
@@ -23,40 +44,214 @@
   padding: 0;
 }
 
-#root {
-  @include flexCenterDimensions(100%, 100vh, white);
+body {
+  width: 100%;
+  @include flexCenter();
+  flex-direction: column;
+  margin: auto;
   padding: 45px 0px 0px 0px;
-  font-family: Montserrat;
+  gap: 50px;
+  font-family: 'Montserrat', sans-serif;
+  // media queries pour le body
+  @media (max-width: 830px) {
+    padding-top: 20px;
+    gap: 27px;
+}
+
 }
 
 header{
-  @include flexCenterDimensions(1240px, 68px, white, row);
+  @include flexDimensions(100%, 68px, white, row);
+  padding: 0px 100px;
+  .logo {
+    width: 210.32px;
+    height: 100%
+  }
+  nav {
+    @include flexDimensions(309px, 34px, white, row);
+    .nav-acceuil {
+      width: 136px;
+      height: 34px;
+      @include write(500,24px,34.22px,black,right);
+    }
+    .nav-acceuil.active {
+      text-decoration: underline;
+    }
+    .nav-apropos {
+      width: 116px;
+      height: 34px;
+      @include write(500,24px,34.22px,black,right);
+    }
+    .nav-apropos.active {
+      text-decoration: underline;
+    }
+    
+  }
+// media queries du header 
+  @media (max-width: 830px) {
+    padding: 0px 20px;
+    height: 46.88px;
+    .logo {
+      width: 145px;
+      height: 100%
+    }
+    nav {
+      width: 190px;
+      height: 17px;
+      justify-content: flex-end;
+      gap: 26px;
+    }
+    nav .nav-acceuil{
+      width: 55px;
+      height: 17px;
+      font-size: 12px;
+      line-height: 17.11px;
+      text-transform: uppercase;
+    }
+    nav .nav-apropos{
+      width: 66px;
+      height: 17px;
+      font-size: 12px;
+      line-height: 17.11px;
+      text-transform: uppercase
+    }
 }
 
-nav {
-  @include flexCenterDimensions(309px, 34px, white, row);
-  .nav-acceuil {
-    width: 136px;
-    height: 34px;
-    @include write(500,24px,34.22px,black,right);
-  }
 
-  .nav-apropos {
-    width: 116px;
-    height: 34px;
-    @include write(500,24px,34.22px,black,right);
-  }
-  
 }
 
 footer{
-  @include flexCenterDimensions(100%, 209px, black);
-  flex-direction: column;
+  @include flexDimensions(100%, 209px, black);
   justify-content: space-around;
   padding-top: 50px;
   margin: 0 auto;
+  .txt-footer{
+    @include write(500,24px,34.22px,white);
+  }
+
+  @media (max-width: 435px) {
+    justify-content: center;
+    .txt-footer {
+      font-size: 12px;
+      line-height: 17.11px;
+      width: 133px;
+      height: 46px;
+      margin-top: 13px;
+    }
+  }
 }
 
-.txt-footer{
-  @include write(500,24px,34.22px,white);
+.logements {
+  @include flexDimensions(100%, 100%, white);
+  padding: 0px 100px;
+  gap: 50px;
+  .banner-titre-home {
+    width: 100%;
+    height: 223px;
+    background: no-repeat center / cover url(../assets/BackgroundTitle.png);
+    @include boxShadowAndBorder();
+    position: relative;
+    border: none;
+    h1 {
+      @include write(700, 48px, 68.45px, #fff);
+      text-shadow: 0px 4px 4px rgba(0,0,0,0.25), 1px 1px 0 black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black; 
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      white-space: nowrap;
+      z-index: 1;
+    }
+    .bg-color{
+      width: 100%;
+      height: 100%;
+      background-color: #000;
+      border-radius: 25px;
+      opacity: 0.6;
+      position: absolute;
+      top: 0px
+    }
+  }
+  .liste-logements {
+    @include flexDimensions(100%, auto, #F6F6F6, row, space-evenly);
+    flex-wrap: wrap;
+    gap: 70px 50px;
+    padding: 15px 15px;
+    border-radius: 25px;
+    .card {
+      width: 340px;
+      height: 340px;
+      border-radius: 15px;
+      display: flex;
+      align-items: flex-end;
+      padding: 0px 0px 20px 20px;
+      text-decoration: none;
+      p {
+        @include write(700,18px,25.67px,rgb(0, 2, 110));
+        text-align: left;
+      }
+    }
+    
+  }
+// media queries banner logement et liste logements du home
+  @media (max-width: 985px) {
+    padding: 0px 20px;
+    gap: 22px;
+  }
+
+  @media (max-width: 830px) {
+    .banner-titre-home {
+      height: 111px;
+      border-radius: 10px;
+      h1 {
+        font-size: 24px;
+        line-height: 24px;
+      }
+      .bg-color {
+        border-radius: 10px;
+      }
+    }
+    .liste-logements {
+      gap: 20px 20px;
+      padding: 20px 7px;  
+      .card {
+        width: 335px;
+        height: 255px;
+      }
+    }
+  }
+
+  @media (max-width: 729px) {
+    background: white;
+    .liste-logements {
+      background: white;
+      .card {
+        width: 100%;
+      }
+    } 
+    
+  }
+
+  @media (max-width: 435px) {
+    .banner-titre-home h1 {
+      white-space: wrap;
+      text-align: left;
+      transform: translate(-70%, -50%);
+      width: 225px;
+    }
+  }
+
+
+
 }
+
+
+
+
+
+
+
+
+
+
+
