--- a/kasa/src/styles/App.scss
+++ b/kasa/src/styles/App.scss
@@ -87,7 +87,7 @@ header{
     }
     
   }
-// media queries du header 
+ // media queries du header 
   @media (max-width: 830px) {
     padding: 0px 20px;
     height: 46.88px;
@@ -146,31 +146,7 @@ footer{
   padding: 0px 100px;
   gap: 50px;
   .banner-titre-home {
-    width: 100%;
-    height: 223px;
     background: no-repeat center / cover url(../assets/BackgroundTitle.png);
-    @include boxShadowAndBorder();
-    position: relative;
-    border: none;
-    h1 {
-      @include write(700, 48px, 68.45px, #fff);
-      text-shadow: 0px 4px 4px rgba(0,0,0,0.25), 1px 1px 0 black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black; 
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      white-space: nowrap;
-      z-index: 1;
-    }
-    .bg-color{
-      width: 100%;
-      height: 100%;
-      background-color: #000;
-      border-radius: 25px;
-      opacity: 0.6;
-      position: absolute;
-      top: 0px
-    }
   }
   .liste-logements {
     @include flexDimensions(100%, auto, #F6F6F6, row, space-evenly);
@@ -193,7 +169,7 @@ footer{
     }
     
   }
-// media queries banner logement et liste logements du home
+ // media queries banner logement et liste logements du home
   @media (max-width: 985px) {
     padding: 0px 20px;
     gap: 22px;
@@ -240,14 +216,85 @@ footer{
       width: 225px;
     }
   }
-
-
-
 }
 
+.banner-titre-home {
+  width: 100%;
+  height: 223px;
+  @include boxShadowAndBorder();
+  position: relative;
+  border: none;
+  h1 {
+    @include write(700, 48px, 68.45px, #fff);
+    text-shadow: 0px 4px 4px rgba(0,0,0,0.25), 1px 1px 0 black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black; 
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    white-space: nowrap;
+    z-index: 1;
+  }
+  .bg-color{
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    border-radius: 25px;
+    opacity: 0.6;
+    position: absolute;
+    top: 0px
+  }
+}
 
+.page-error {
+  @include flexDimensions(100%, auto, white);
+  padding: 0px 25px;
+  margin: 50px 0px;
 
+  .number-error {
+    @include write(700,288px,410.69px,#FF6060,center);
+    margin: 0px 0px 50px 0px;
+  }
 
+  .txt-error {
+    @include write(500,36px,51.34px,#FF6060,center);
+    margin: 50px 0px 50px 0px;
+  }
+
+  .lien-page-accueil {
+    @include write(500,18px,25.67px,black,center);
+    text-decoration: underline;
+    margin: 100px 0px 100px 0px;
+  }
+
+  @media (max-width: 729px) {
+    .number-error {
+      font-size: 96px;
+      line-height: 136.9px;
+    }
+
+    .txt-error {
+      font-size: 18px;
+      line-height: 25.67px;
+    }
+
+    .lien-page-accueil {
+      font-size: 14px;
+      line-height: 19.96px;
+    }
+  }
+}
+
+.a-propos {
+  @include flexDimensions(100%, 100%, white);
+  padding: 0px 100px;
+  gap: 50px;
+  .banner-titre-home{
+    background: no-repeat center / cover url(../assets/imgApropos.png);
+    h1 {
+      display: none;
+    }
+  }
+}
 
 
 
