ajout des fonctionnalités de la page à propos et mise en place en place de la page fiche de logement

--- a/kasa/src/styles/App.scss
+++ b/kasa/src/styles/App.scss
@@ -4,7 +4,7 @@
 @import '_Home.scss';
 @import '_PageError.scss';
 @import '_Apropos.scss';
-@import 'FicheLogement.scss';
+@import '_FicheLogement.scss';
 
 *, ::before, ::after {
   box-sizing: border-box;
