--- a/kasa/src/styles/_FicheLogement.scss
+++ b/kasa/src/styles/_FicheLogement.scss
@@ -1,60 +1,77 @@
 .fiche-logement {
     @include flexDimensions(100%, auto, white);
     padding: 0px 100px;
+    position: relative;
     .caroussel-pitures {
       @include flexDimensions(100%, 415px, white);
       border-radius: 25px;
       margin-bottom: 15px;
       overflow: hidden;
+      position: relative;
       .carroussel-container {
         width: 100%;
         height: 100%;
+        border-radius: 25px;
         display: flex;
         transition: transform 1s ease-in-out;
         .pictures {
           width: 100%;
           height: 100%;
           object-fit: cover;
-          border-radius: 25px;
           flex-shrink: 0;
         }
       }
       .fleche-precedent {
-        width: 96px;
-        height: 119.64px;
-        position: relative;
-        top: -207.5px;
-        left: -50%;
+        width: 46.68px;
+        height: 80px;
+        position: absolute;
+        top: 50%;
+        left: 15px;
         transform: translateY(-50%);
-        margin-left: 130px;
         cursor: pointer;
+        @media (max-width: 660px) {
+          width: 25px;
+          height: 25px;
+        }
         i {
           font-weight: 46.68px;
           font-size: 79.2px;
           color: white;
-          border-radius: 25px
+          @media (max-width: 660px) {
+            font-size: 24px;
+            font-weight: 24px;
+          }
         }
       }
       .fleche-suivant {
         @extend .fleche-precedent;
-        top: -327.14px;
-        left: 50%;
-        transform: translateY(-50%);
-        margin-right: 175px;
+        right: 30px;
+        left: auto;
+        @media (max-width: 660px) {
+          right: 15px;
+        }
       }
       .pagination {
         @include write(500,18px,25.67px,white);
-        position: relative;
-        top: -125px;
-        
+        height: 18px;
+        position: absolute;
+        top: auto;
+        bottom: 35px;
+      }
+
+      @media (max-width: 660px) {
+        height: 255px;
+        margin-bottom: 8px;
       }
     }
   
     .titre-localisation-proprietaire{
-      @include flexDimensions(100%, 90px, white, row);
+      @include flexDimensions(100%, auto, white, row);
+      margin-bottom: 15px;
+      position: relative;
       .titre-et-localisation {
         width: 100%;
-        height: 77px;
+        height: auto;
         .titre {
           @include write(500,36px,51.34px,#FF6060);
           text-align: left;
@@ -87,14 +104,61 @@
           margin: auto 0px;
         }
       }
+
+      @media (max-width: 940px) {
+        .titre-et-localisation {
+          .titre {
+            font-size: 18px;
+            line-height: 25.67px;
+          }
+          .localisation {
+            font-size: 14px;
+            line-height: 19.96px;
+          }
+        }
+        .proprietaire {
+          width: 135.5px;
+          height: 33px;
+          .photo img {
+            width: 32px;
+            height: 32px;
+          }
+          p {
+            font-size: 12px;
+            line-height: 17.11px;
+          }
+        }
+      }
+
+      @media (max-width: 660px) {
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        .titre-et-localisation {
+          margin-bottom: 30px;
+        }
+        .proprietaire {
+          position: absolute;
+          left: 100%;
+          top: 75%;
+          transform: translate(-100%, 100%);
+          z-index: 20;
+        }
+      }
     }
 
     .tag-rating {
-      @include flexDimensions(100%, 36px, white, row);
+      @include flexDimensions(100%, auto, white, row);
       margin-bottom: 25px;
+      gap: 0px 20px;
+      position: relative;
       .bloc-tags {
         @include flexDimensions(auto, 36px, white, row);
-        gap: 0px 15px;
+        gap: 10px 15px;
+        align-items: flex-start;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+        height: auto;
         .tags {
           height: 25px;
           border-radius: 10px;
@@ -102,6 +166,8 @@
           @include flexCenter();
           width: auto;
           min-width: 115px;
+          margin: auto 0px;
+          white-space: nowrap;
           p {
             @include write(700,14px,19.96px,white);
             margin: 3px 15px 0px 15px;
@@ -120,6 +186,61 @@
             color: #FF6060;
           }
         }
+      }
+
+      @media (max-width:940px) {
+        align-items: flex-start;
+        margin-bottom: 15px;
+        .bloc-tags {
+          width: 100%;
+          height: 100%;
+          align-items: center;
+          .tags {
+            height: 100%;
+            width: 84px;
+            p {
+              font-size: 10px;
+              line-height: 14.26px;
+              white-space: nowrap;
+              margin-top: 0px;
+            }
+          }
+        }
+        
+        .rating {
+          height: 18px;
+          justify-content: flex-end;
+          gap: 0px 10px;
+          .etoile {
+            font-size: 13px;
+          }
+        }
+      }
+
+      @media (max-width: 660px) {
+        flex-direction: column;
+        justify-content: flex-start;
+        position: relative;
+        top: -33px;
+        gap: 16px 0px;
+        margin-bottom: 0px;
+        .bloc-tags {
+          flex-wrap: wrap;
+          align-items: flex-start;
+          justify-content: flex-start;
+          gap: 10px 15px;
+          margin-bottom: 10px;
+          margin-right: auto;
+          .tags {
+            min-width: 90px;
+            width: auto;
+          }
+        }
+        .rating {
+          justify-content: flex-start;
+          margin: 8px 15px 0px 15px;
+        }
+
       }
     }
 
@@ -170,7 +291,39 @@
             transform: translateY(-42%);
             opacity: 0;
         }
+      }
+    
+      @media (max-width: 940px) {
+        flex-direction: column;
+        .les-apropos {
+          .titre {
+            height: 30px;
+            p {
+              font-size: 13px;
+              line-height: 18.54px;
+            }
+            i {
+              font-size: 9.14px;
+            }
+          }
+
+          .paragraphe {
+            font-size: 11px;
+            line-height: 14.32px;
+            padding: 5px 10px 5px 15px;
+            margin-bottom: 5px;
+          }
+        }        
+      }
+    
     }
+
+    @media (max-width: 830px) {
+      padding: 0px 20px;
+      footer {
+        margin-top: 20px;
+      }
+      
     }
     
   }  
