modification style page d'accueil

--- a/kasa/src/styles/_Home.scss
+++ b/kasa/src/styles/_Home.scss
@@ -35,9 +35,9 @@
     @media (max-width: 830px) {
       .liste-logements {
         gap: 20px 20px;
-        padding: 20px 7px;  
+        padding: 20px 20px;  
         .card {
-          width: 335px;
+          width: 46.38%;
           height: 255px;
         }
       }
